--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,5 +1,5 @@
 <%= form_for @recipes do |f| %>
 <p>Title: <%= f.text_field :title %></p>
   <ul>
-    <%= f.fields_for :ingedients
+    <%= f.fields_for :ingredients 
   </ul>
