Automatically backed up by Learn

--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -2,5 +2,7 @@
 <p>Title: <%= f.text_field :title %></p>
   <ul>
     <%= f.fields_for :ingredients do |ingredients| %>
-    <li></li>
+    <li>
+      name:
+    </li>
   </ul>
