Automatically backed up by Learn

--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -3,6 +3,7 @@
   <ul>
     <%= f.fields_for :ingredients do |ingredients| %>
     <li>
-      name:
+      name: <%= ingredient.text_field :name %>
+      
     </li>
   </ul>
