--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -4,6 +4,6 @@
     <%= f.fields_for :ingredients do |ingredients| %>
     <li>
       name: <%= ingredient.text_field :name %>
-      qty: <%= 
+      qty: <%= ingredient.text_field :
     </li>
   </ul>
