Automatically backed up by Learn

--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -6,4 +6,6 @@
       name: <%= ingredient.text_field :name %>
       qty: <%= ingredient.text_field :quality %>
     </li>
+    <% end %>
+    <%= link_to 'add ingredient', @recipe %>
   </ul>
