Automatically backed up by Learn

--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,10 +1,10 @@
-<%= form_for @recipes do |f| %>
-<p>Title: <%= f.text_field :title %></p>
+<%= form_for @recipe do |f| %>
+  <p>Title: <%= f.text_field :title %></p>
   <ul>
-    <%= f.fields_for :ingredients do |ingredients| %>
+    <%= f.fields_for :ingredients do |ingredient| %>
     <li>
       name: <%= ingredient.text_field :name %>
-      qty: <%= ingredient.text_field :quality %>
+      qty: <%= ingredient.text_field :quantity %>
     </li>
     <% end %>
     <%= link_to 'add ingredient', @recipe %>
